--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "express": "~4.2.0",
-    "static-favicon": "~1.0.0",
-    "morgan": "~1.0.0",
-    "cookie-parser": "~1.0.1",
     "body-parser": "~1.0.0",
+    "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
-    "hjs": "~0.0.6"
+    "express": "~4.2.0",
+    "file-poster": "^0.1.1",
+    "hjs": "~0.0.6",
+    "lwip": "0.0.9",
+    "morgan": "~1.0.0",
+    "static-favicon": "~1.0.0"
   }
 }
